@@ -50,8 +50,13 @@ base dc=padl,dc=com
 # Search timelimit
 #timelimit 30
 
-# Bind timelimit
+# Bind/connect timelimit
 #bind_timelimit 30
+
+# Reconnect policy: hard (default) will retry connecting to
+# the software with exponential backoff, soft will fail
+# immediately.
+#bind_policy hard
 
 # Idle timelimit; client will close connections
 # (nss_ldap only) if the server has not been contacted
